--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "bootstrap": "^5.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "17.0.2",
-    "react-feather": "^2.0.9",
-    "react-responsive-carousel": "^3.2.21"
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
