--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@types/react-custom-scrollbars": "^4.0.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9"
   },
