--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.2",
-    "react-feather": "^2.0.9"
+    "react-feather": "^2.0.9",
+    "react-multi-carousel": "^2.6.5"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
