--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-custom-scrollbars": "^4.0.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
